# Practice_Django

./: .gitignore  pyproject.toml  requirements.txt
api/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
api/templates/: book.html
api/templates/api/: author_list.html
blog/: models.py
blog/management/commands/: create_fake_posts.py
blog/migrations/: 0001_initial.py
chat/: views.py
config/: asgi.py  settings.py  urls.py
config/settings/: common.py
core/: models.py
templates/api/: book_detail.html  book_list.html  publisher_list.html
templates/chat/: echo_page.html
